Update SecurityConfig for dynamic CORS origins
Refactor SecurityConfig to use environment variable for allowed origins and improve CORS configuration.